--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 title: gwenshiro's portfolio
 description: bookmark this to keep an eye on my on-going projects!
